# IRIDIC

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
docs/iridic_manual/: 01_overview.md  iridic_manual_pdf.yaml
docs/iridic_manual/02_policies/: 02_04_github_updates.md  02_06_pypi_updates.md
docs/iridic_manual/03_protocols/: 03_01_manual_export.md  03_02_rename_repo.md  03_03_rename_conda_env.md
docs/manual/: 00_outline.md
docs/manual/02_development/: 04_testing.md  06_remove_tracked_files.md
docs/manual/02_policies/: 02_01_manuals.md  02_05_versioning.md  02_10_documentation_ontology.md
docs/tools_manual/: 00_outline.md
manual/: 00_outline.md  manual_pdf.yaml
manual/02_policies/: 02_01_manuals.md  02_02_naming.md  02_03_dependencies.md  02_04_github_updates.md  02_05_versioning.md  02_06_pypi_updates.md  02_07_readmes.md  02_08_repo_structure.md
manual/03_protocols/: 03_01_manual_export.md  03_02_rename_repo.md  03_03_rename_conda_env.md
manual/04_modules/: 04_00_modules_overview.md  04_01_manual_pdf_yaml.md  04_06_manual_viewer.md  04_07_cli_reference.md  04_08_cli_quick_recipes.md
manual/policies/: dependencies.md  github_updates.md
policies/: general.md  github_updates.md  pypi_updates.md
protocols/: rename_conda_env.md
src/: build_manual_outline.py  build_manual_pdf.py
src/iridic/: __init__.py  cli.py  cli_args.py  manual_chars.py  manual_outline.py  manual_pdf.py  manual_viewer.py  streamlit_app.py
templates/common/: .editorconfig  .gitattributes
templates/manual/: manual_pdf_template.yaml
templates/testing/: COMMANDS.md
(+33 files in other folders)
