[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iridic"
version = "0.1.0"
description = "Utilities for building, validating, and rendering project manuals"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Nick McCloskey" }]

dependencies = [
    "PyYAML",
    "python-docx",
]

[project.optional-dependencies]
webapp = [
    "markdown",
    "streamlit",
    "weasyprint",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
iridic = "iridic.cli:main"
